# linreg-practice

./: README.md  pyproject.toml  train_linreg.py
