[project]
name = "linreg-practice"
version = "0.1.0"
description = "Linear regression practice project"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "joblib",
    "statsmodels",
    "flask",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"